crates/walrus-semantics/snapshots/infer/coerce_match_branches2.snap
---
source: crates/walrus-semantics/src/ty.rs
expression: types

---
InferenceResult {
    type_of_var: {
        1: Primitive(
            Int,
        ),
        2: Primitive(
            Int,
        ),
    },
    type_of_expr: {
        0: Primitive(
            Int,
        ),
        1: Tuple(
            [],
        ),
        2: Primitive(
            Never,
        ),
        3: Primitive(
            Int,
        ),
        4: Primitive(
            Int,
        ),
        5: Primitive(
            Int,
        ),
    },
    type_of_type: {
        0: Primitive(
            Int,
        ),
    },
    type_of_pat: {
        0: Primitive(
            Int,
        ),
        1: Primitive(
            Int,
        ),
    },
    type_of_fn: {
        0: FnType {
            params: [],
            ret: Primitive(
                Int,
            ),
        },
    },
    diagnostics: [],
}
