crates/walrus-semantics/snapshots/infer/empty_fn.snap
---
source: crates/walrus-semantics/src/ty.rs
expression: types
---
InferenceResult {
    type_of_expr: {
        0: App(
            TypeApp {
                ctor: Tuple,
                params: [],
            },
        ),
    },
    type_of_type: {},
    type_of_pat: {},
    type_of_fn: {
        0: FnType {
            params: [],
            ret: App(
                TypeApp {
                    ctor: Tuple,
                    params: [],
                },
            ),
        },
    },
    diagnostics: [],
}
