crates/walrus-semantics/snapshots/infer/enum_constructor.snap
---
source: crates/walrus-semantics/src/ty.rs
expression: types

---
InferenceResult {
    type_of_var: {
        3: Primitive(
            Int,
        ),
        6: Primitive(
            Bool,
        ),
        10: Primitive(
            Int,
        ),
    },
    type_of_expr: {
        0: Primitive(
            Int,
        ),
        1: Enum(
            0,
        ),
        2: Enum(
            0,
        ),
    },
    type_of_type: {
        0: Primitive(
            Int,
        ),
        1: Primitive(
            Bool,
        ),
        2: Enum(
            0,
        ),
    },
    type_of_pat: {},
    type_of_fn: {
        0: FnType {
            params: [],
            ret: Enum(
                0,
            ),
        },
    },
    diagnostics: [],
}
