crates/walrus-semantics/snapshots/infer/field_pat.snap
---
source: crates/walrus-semantics/src/ty.rs
expression: types

---
InferenceResult {
    type_of_var: {
        2: Primitive(
            Int,
        ),
        4: Primitive(
            Int,
        ),
        7: Primitive(
            Int,
        ),
        8: Primitive(
            Int,
        ),
        10: Primitive(
            Int,
        ),
        11: Primitive(
            Int,
        ),
        12: Primitive(
            Int,
        ),
    },
    type_of_expr: {
        0: Primitive(
            Int,
        ),
        1: Primitive(
            Int,
        ),
        2: Struct(
            0,
        ),
        3: Primitive(
            Int,
        ),
        4: Primitive(
            Int,
        ),
    },
    type_of_type: {
        0: Primitive(
            Int,
        ),
        1: Primitive(
            Int,
        ),
        2: Primitive(
            Int,
        ),
    },
    type_of_pat: {
        0: Struct(
            0,
        ),
    },
    type_of_fn: {
        0: FnType {
            params: [],
            ret: Primitive(
                Int,
            ),
        },
    },
    diagnostics: [],
}
