crates/walrus-semantics/snapshots/infer/float_lit.snap
---
source: crates/walrus-semantics/src/ty.rs
expression: types

---
InferenceResult {
    type_of_var: {},
    type_of_expr: {
        0: Primitive(
            Float,
        ),
        1: Primitive(
            Float,
        ),
    },
    type_of_type: {
        0: Primitive(
            Float,
        ),
    },
    type_of_pat: {},
    type_of_fn: {
        0: FnType {
            params: [],
            ret: Primitive(
                Float,
            ),
        },
    },
    diagnostics: [],
}
